==> qiaochengyang/grbl/grbl/limits.c <==
#include "grbl.h"
  #define HOMING_AXIS_SEARCH_SCALAR  1.5 // Must be > 1 to ensure limit switch will be engaged.
  #define HOMING_AXIS_LOCATE_SCALAR  5.0 // Must be > 1 to ensure limit switch is cleared.
  #define DUAL_AXIS_CHECK_DISABLE     0  // Must be zero
  #define DUAL_AXIS_CHECK_ENABLE      bit(0)
  #define DUAL_AXIS_CHECK_TRIGGER_1   bit(1)
  #define DUAL_AXIS_CHECK_TRIGGER_2   bit(2)

void limits_init()
{
  // LIMIT_DDR &= ~(LIMIT_MASK); // Set as input pins
  
  // #ifdef DISABLE_LIMIT_PIN_PULL_UP
  //   LIMIT_PORT &= ~(LIMIT_MASK); // Normal low operation. Requires external pull-down.
  // #else
  //   LIMIT_PORT |= (LIMIT_MASK);  // Enable internal pull-up resistors. Normal high operation.
  // #endif

  // if (bit_istrue(settings.flags,BITFLAG_HARD_LIMIT_ENABLE)) {
  //   LIMIT_PCMSK |= LIMIT_MASK; // Enable specific pins of the Pin Change Interrupt
  //   PCICR |= (1 << LIMIT_INT); // Enable Pin Change Interrupt
  // } else {
  //   limits_disable();

  // }

  // #ifdef ENABLE_SOFTWARE_DEBOUNCE
  //   MCUSR &= ~(1<<WDRF);
  //   WDTCSR |= (1<<WDCE) | (1<<WDE);
  //   WDTCSR = (1<<WDP0); // Set time-out at ~32msec.
  // #endif


  //
    // Enable the GPIO port to which the pushbuttons are connected.
    //
    MAP_SysCtlPeripheralEnable(LIMIT_SYSCTL);

    //
    // Unlock PF0 so we can change it to a GPIO input
    // Once we have enabled (unlocked) the commit register then re-lock it
    // to prevent further changes.  PF0 is muxed with NMI thus a special case.
    //
    HWREG(LIMIT_PORT + GPIO_O_LOCK) = GPIO_LOCK_KEY;
    HWREG(LIMIT_PORT + GPIO_O_CR) |= 0x01;
    HWREG(LIMIT_PORT + GPIO_O_LOCK) = 0;

    //
    // Set each of the button GPIO pins as an input with a pull-up.
    //
    MAP_GPIODirModeSet(LIMIT_PORT, LIMIT_MASK, GPIO_DIR_MODE_IN);
    MAP_GPIOPadConfigSet(LIMIT_PORT, LIMIT_MASK,
                         GPIO_STRENGTH_2MA, GPIO_PIN_TYPE_STD_WPU);
    if (bit_istrue(settings.flags,BITFLAG_HARD_LIMIT_ENABLE)) {
      // LIMIT_PCMSK |= LIMIT_MASK; // Enable specific pins of the Pin Change Interrupt
      // PCICR |= (1 << LIMIT_INT); // Enable Pin Change Interrupt
      GPIOIntTypeSet(LIMIT_PORT,LIMIT_MASK,GPIO_RISING_EDGE);
      GPIOIntRegister(LIMIT_PORT, LimitSigINtHandler);
      GPIOIntEnable(LIMIT_PORT,LIMIT_INT);
    } else {
      limits_disable();

  }                     
    
}

void limits_disable()
{
  // LIMIT_PCMSK &= ~LIMIT_MASK;  // Disable specific pins of the Pin Change Interrupt
  // PCICR &= ~(1 << LIMIT_INT);  // Disable Pin Change Interrupt
  GPIOIntDisable(LIMIT_PORT,LIMIT_INT);
}

uint8_t limits_get_state()
{
  uint8_t limit_state = 0;
  uint8_t pin =GPIOPinRead(LIMIT_PORT,LIMIT_MASK);
  #ifdef INVERT_LIMIT_PIN_MASK
    pin ^= INVERT_LIMIT_PIN_MASK;
  #endif
  if (bit_isfalse(settings.flags,BITFLAG_INVERT_LIMIT_PINS)) { pin ^= LIMIT_MASK; }
  if (pin) {
    uint8_t idx;
    for (idx=0; idx<N_AXIS; idx++) {
      if (pin & get_limit_pin_mask(idx)) { limit_state |= (1 << idx); }
    }
    #ifdef ENABLE_DUAL_AXIS
      if (pin & (1<<DUAL_LIMIT_BIT)) { limit_state |= (1 << N_AXIS); }
    #endif
  }
  return(limit_state);
}
